completo resumen libro 7

--- a/lp06.md
+++ b/lp06.md
@@ -1,3 +1,6 @@
-larry ploter y el misterio del hacker
+larry ploter y el misterio del hacker (baldemort)
 
 larry descubre un libro de ensamblador y compiladores que pertenece a un misteroso hacker
+a lo largo de la historia **baldermor** esta de todo lo misterio
+
+**Larry** y el director del colegio encuentran una nueva forma de convatirle 
