--- a/lp07.md
+++ b/lp07.md
@@ -1,4 +1,9 @@
+﻿
 Larry plotter y los comits de la muerte
 
 larry y rom y version se lanzan a la busqueda de los exploits
 que booldemort necesita
+destruyendo todos los exploits venceran a baldemort
+pero el camino no sera facil porque sis portatiles no tienen mucha bateria
+**Larry** debera usar todos los conocimientos que a adquirido para poder entragar el producto sin malware 
+
